Bug 85232 - FORMATTING: (Grouped) drawing objects are rendered in a wrong way (.docx file)
Summary: FORMATTING: (Grouped) drawing objects are rendered in a wrong way (.docx file)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.4 release
Hardware: All All
: medium major
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.1.0 target:5.0.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2014-10-20 11:17 UTC by Juha
Modified: 2016-10-25 19:21 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
The problematic .docx (91.21 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-10-20 11:17 UTC, Juha
Details
screenshot in 4.2.6.2 nearly correct (24.89 KB, image/png)
2014-10-20 19:11 UTC, tommy27
Details
4.2.6.2 screenshot - nearly correct (28.22 KB, image/png)
2014-10-20 19:17 UTC, tommy27
Details
4.3.0.4 screenshot - regression (23.81 KB, image/png)
2014-10-20 19:18 UTC, tommy27
Details
new problematic .docx that has the same problem (43.57 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-10-22 19:52 UTC, Juha
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Juha 2014-10-20 11:17:43 UTC
Created attachment 108107 [details]
The problematic .docx

Check this comparison picture: http://i.imgbox.com/UD9SAHMi.png (MS Office left, Libre right)

Those images I circled, are renderd in a wrong way by LibreOffice. Those images are drawn part by part, they are not "united".

This picture may clarify things: http://i.imgbox.com/mNjU84qp.png (as you can see it's possible to select parts of that image)

This .docx file is attached!
Comment 1 tommy27 2014-10-20 19:10:58 UTC
bug confirmed under Win7x64 using LibO 4.3.0.4, 4.3.2.2 and 4.4.0.0.alpha0+ (*)

document is nearly correct in 4.2.6.2, hence there's a regression in 4.3.x

(*) Build ID: 3e2bd1e4022e25b77bcc8eba5e02c1adc57008a1
TinderBox: Win-x86@42, Branch:master, Time: 2014-10-16_01:04:13
Comment 2 tommy27 2014-10-20 19:11:50 UTC
Created attachment 108128 [details]
screenshot in 4.2.6.2 nearly correct
Comment 3 tommy27 2014-10-20 19:17:29 UTC
Created attachment 108129 [details]
4.2.6.2 screenshot - nearly correct
Comment 4 tommy27 2014-10-20 19:18:14 UTC
Created attachment 108130 [details]
4.3.0.4 screenshot - regression
Comment 5 Cor Nouws 2014-10-20 19:59:04 UTC
thanks for checking with 4.2.6 tommy27!
Cheers,
Cor
Comment 6 Xisco Faulí 2014-10-22 10:04:57 UTC
bibisected:

There are only 'skip'ped commits left to test.
The first bad commit could be any of: 518c9b83800dfc9c791d592245d7e467bfec82c5 92abe3d8366d452263401a2a61d6d7fa894cbfbd 835ce851abe657bb5a8238693ea924287e6890c0
We cannot bisect more!

# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# good: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb
git bisect good e02439a3d6297a1f5334fa558ddec5ef4212c574
# bad: [4850941efe43ae800be5c76e1102ab80ac2c085d] source-hash-980a6e552502f02f12c15bfb1c9f8e6269499f4b
git bisect bad 4850941efe43ae800be5c76e1102ab80ac2c085d
# skip: [a043626b542eb8314218d7439534dce2fc325304] source-hash-9379a922c07df3cdb7d567cc88dfaaa39ead3681
git bisect skip a043626b542eb8314218d7439534dce2fc325304
# skip: [aba65c3e4c0df07e4909aeefb758cdb688242bf6] source-hash-827524abfb4b577d08276fde40929a9adfb7ff1a
git bisect skip aba65c3e4c0df07e4909aeefb758cdb688242bf6
# skip: [aba65c3e4c0df07e4909aeefb758cdb688242bf6] source-hash-827524abfb4b577d08276fde40929a9adfb7ff1a
git bisect skip aba65c3e4c0df07e4909aeefb758cdb688242bf6
# good: [c81a8a0dcfc1ed095a80e4485c89dd0fcaf73f31] source-hash-c69ed33628ec0b7abf6296539cf280d6c4265930
git bisect good c81a8a0dcfc1ed095a80e4485c89dd0fcaf73f31
# good: [c81a8a0dcfc1ed095a80e4485c89dd0fcaf73f31] source-hash-c69ed33628ec0b7abf6296539cf280d6c4265930
git bisect good c81a8a0dcfc1ed095a80e4485c89dd0fcaf73f31
# good: [30cde618212ecaf5725321372bd1b8339f8e2b9f] source-hash-137f872aa8e6e598e7c7ed1ffa4d21e580e22bdb
git bisect good 30cde618212ecaf5725321372bd1b8339f8e2b9f
# good: [30cde618212ecaf5725321372bd1b8339f8e2b9f] source-hash-137f872aa8e6e598e7c7ed1ffa4d21e580e22bdb
git bisect good 30cde618212ecaf5725321372bd1b8339f8e2b9f
# bad: [306d62ec4b911895f08f2bb8efefebed7ac795f0] source-hash-735bd120c9ee2d9bb3514907936c27efb75d7282
git bisect bad 306d62ec4b911895f08f2bb8efefebed7ac795f0
# bad: [306d62ec4b911895f08f2bb8efefebed7ac795f0] source-hash-735bd120c9ee2d9bb3514907936c27efb75d7282
git bisect bad 306d62ec4b911895f08f2bb8efefebed7ac795f0
# bad: [835ce851abe657bb5a8238693ea924287e6890c0] source-hash-1e53784811458563b36fd4cbaa15c2f526a7161b
git bisect bad 835ce851abe657bb5a8238693ea924287e6890c0
# good: [159e65f9cccfc8e4774d7a60f00876c07fc7c82a] source-hash-a0be5278c24efcc9a6f22fe5398d780b0744f8ce
git bisect good 159e65f9cccfc8e4774d7a60f00876c07fc7c82a
# skip: [518c9b83800dfc9c791d592245d7e467bfec82c5] source-hash-4ec8c63b5d41ca9ad7dd9ed10dda6b40927d859c
git bisect skip 518c9b83800dfc9c791d592245d7e467bfec82c5
# skip: [92abe3d8366d452263401a2a61d6d7fa894cbfbd] source-hash-9c2a085a45f9acb305fb85367bede360982e71cb
git bisect skip 92abe3d8366d452263401a2a61d6d7fa894cbfbd
# only skipped commits left to test
# possible first bad commit: [835ce851abe657bb5a8238693ea924287e6890c0] source-hash-1e53784811458563b36fd4cbaa15c2f526a7161b
# possible first bad commit: [518c9b83800dfc9c791d592245d7e467bfec82c5] source-hash-4ec8c63b5d41ca9ad7dd9ed10dda6b40927d859c
# possible first bad commit: [92abe3d8366d452263401a2a61d6d7fa894cbfbd] source-hash-9c2a085a45f9acb305fb85367bede360982e71cb
Comment 7 Juha 2014-10-22 19:51:41 UTC
Hello! I have a new sample file that has the very same problem.

Screenshot here http://i.imgbox.com/8DWyf0qH.png

The another .docx added as an attachment.
Comment 8 Juha 2014-10-22 19:52:35 UTC
Created attachment 108257 [details]
new problematic .docx that has the same problem
Comment 9 Matthew Francis 2014-12-27 08:11:35 UTC
The rendering appears to change as of the below commit

Adding Cc: to vmiklos@collabora.co.uk. Could you possibly take a look at this? Thanks

commit 8c73b16f5f18f3bc1dbf9ff6c1475db56b44d304
Author: Miklos Vajna <vmiklos@collabora.co.uk>
Date:   Thu Dec 5 14:00:52 2013 +0100

    DOCX import: declare wpg as a supported feature
    
    This is the same as wps, just for group shapes.
    
    Change-Id: I321b19ed538a6cb8f9068c7de6fbe9a8eb0bd82f
Comment 10 Miklos Vajna 2015-11-07 14:50:18 UTC
The problem seems to be specific to line shapes inside group shapes, described using DML (before the above commit we read the VML fallback), embedded inside DOCX. I'll take a look.
Comment 11 Commit Notification 2015-11-11 07:59:39 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=11129d89b152db54c86bb2bda58c24b8abb6c5a8

tdf#85232 WPG import: fix handling of line shapes

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2015-11-13 15:28:39 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ca8cdb9afc886f3013a7c1d8707d4c5bef70a1c5&h=libreoffice-5-0

tdf#85232 WPG import: fix handling of line shapes

It will be available in 5.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Robinson Tryon (qubit) 2015-12-17 08:37:24 UTC Comment hidden (obsolete)
Comment 14 Juha 2015-12-20 22:33:41 UTC
Definetely better now than before, but V and A inside the circles are too small. Or should it be reported as another bug?

What about the second .docx file? It's still not fixed.
Comment 15 tommy27 2015-12-20 22:37:01 UTC
please file a new report about residual issues and put this bug number under the "see also" field
Comment 16 tommy27 2015-12-21 06:27:42 UTC
(In reply to Juha from comment #14)
> ....
> What about the second .docx file? It's still not fixed.

open a clean new report about that one,
the fact it's unchanged despite the fix suggest that this is a different bug