tdf#85232 WPG import: fix handling of line shapes

The missing convertMm100ToTwip() calls mispositioned the line shapes
inside the groupshape in case of using drawingML inside DOCX files.

(cherry picked from commit 11129d89b152db54c86bb2bda58c24b8abb6c5a8)

Conflicts:
	sw/qa/extras/ooxmlimport/ooxmlimport.cxx

Conflicts:
	sw/qa/extras/ooxmlimport/ooxmlimport.cxx

Change-Id: I0c9d652de43d779f9073a8bfe22866ce4f31d0fa